--- a/_episodes_rmd/02-intro-using-regression.Rmd
+++ b/_episodes_rmd/02-intro-using-regression.Rmd
@@ -33,7 +33,7 @@ In this book we try to minimize mathematical notation as much as possible. Furth
 
 We will describe three examples from the life sciences: one from physics, one related to genetics, and one from a mouse experiment. They are very different, yet we end up using the same statistical technique: fitting linear models. Linear models are typically taught and described in the language of matrix algebra. 
 
-```{r echo=FALSE}
+```{r echo=FALSE, warning=FALSE}
 library(rafalib)
 ```
 
@@ -47,22 +47,22 @@ Imagine you are Galileo in the 16th century trying to describe the velocity of a
 set.seed(1)
 g <- 9.8 ##meters per second
 n <- 25
-tt <- seq(0,3.4,len=n) ##time in secs, note: we use tt because t is a base function
-d <- 56.67  - 0.5*g*tt^2 + rnorm(n,sd=1) ##meters
+tt <- seq(0, 3.4, len=n) ##time in secs, note: we use tt because t is a base function
+d <- 56.67  - 0.5 * g * tt^2 + rnorm(n, sd=1) ##meters
 ```
 
 The assistants hand the data to Galileo and this is what he sees:
 
 ```{r gravity, fig.cap="Simulated data for distance travelled versus time of falling object measured with error."}
 mypar()
-plot(tt,d,ylab="Distance in meters",xlab="Time in seconds")
+plot(tt, d, ylab="Distance in meters", xlab="Time in seconds")
 ```
 
 He does not know the exact equation, but by looking at the plot above he deduces that the position should follow a parabola. So he models the data with:
 
-$$ Y_i = \beta_0 + \beta_1 x_i + \beta_2 x_i^2 + \varepsilon_i, i=1,\dots,n $$
+<i>&Upsilon;<sub>i</sub> = &beta;<sub>0</sub> + &beta;<sub>1</sub>x<sub>i</sub> + &beta;<sub>2</sub>x &sup2;<sub>i</sub></i> + &epsilon;<sub>i</sub>, i = 1, ..., n</i>
 
-With $Y_i$ representing location, $x_i$ representing the time, and $\varepsilon_i$ accounting for measurement error. This is a linear model because it is a linear combination of known quantities (the $x$'s) referred to as predictors or covariates and unknown parameters (the $\beta$'s).
+With <i>&Upsilon;<sub>i</sub></i> representing location, <i>x<sub>i</sub></i> representing the time, and <i>&epsilon;</i> accounting for measurement error. This is a linear model because it is a linear combination of known quantities (the <i>x</i>'s) referred to as predictors or covariates and unknown parameters (the <i>&beta;</i>'s).
 
 #### Father & son heights
 Now imagine you are Francis Galton in the 19th century and you collect paired height data from fathers and sons. You suspect that height is inherited. Your data:
@@ -81,9 +81,10 @@ plot(x,y,xlab="Father's height",ylab="Son's height")
 
 The sons' heights do seem to increase linearly with the fathers' heights. In this case, a model that describes the data is as follows:
 
-$$ Y_i = \beta_0 + \beta_1 x_i + \varepsilon_i, i=1,\dots,N $$
+<i>&Upsilon;<sub>i</sub> = &beta;<sub>0</sub> + &beta;<sub>1</sub>x<sub>i</sub> + &epsilon;<sub>i</sub>, i = 1, ..., N</i>
 
-This is also a linear model with $x_i$ and $Y_i$, the father and son heights respectively, for the $i$-th pair and $\varepsilon_i$ a term to account for the extra variability. Here we think of the fathers' heights as the predictor and being fixed (not random) so we use lower case. Measurement error alone can't explain all the variability seen in $\varepsilon_i$. This makes sense as there are other variables not in the model, for example, mothers' heights, genetic randomness, and environmental factors.
+
+This is also a linear model with <i>x<sub>i</sub></i> and <i>&Upsilon;<sub>i</sub></i>, the father and son heights respectively, for the <i>i</i>-th pair and <i>&epsilon;<sub>i</sub></i> a term to account for the extra variability. Here we think of the fathers' heights as the predictor and being fixed (not random) so we use lower case. Measurement error alone can't explain all the variability seen in <i>&epsilon;<sub>i</sub></i>. This makes sense as there are other variables not in the model, for example, mothers' heights, genetic randomness, and environmental factors.
 
 #### Random samples from multiple populations
 
@@ -105,40 +106,38 @@ stripchart(Bodyweight~Diet,data=dat,vertical=TRUE,method="jitter",pch=1,main="Mi
 
 We want to estimate the difference in average weight between populations. We demonstrated how to do this using t-tests and confidence intervals, based on the difference in sample averages. We can obtain the same exact results using a linear model:
 
-$$ Y_i = \beta_0 + \beta_1 x_{i} + \varepsilon_i$$
+<i>&Upsilon;<sub>i</sub> = &beta;<sub>0</sub> + &beta;<sub>1</sub>x<sub>i</sub> + &epsilon;<sub>i</sub></i>
 
-with $\beta_0$ the chow diet average weight, $\beta_1$ the difference between averages, $x_i = 1$ when mouse $i$ gets the high fat (hf) diet, $x_i = 0$ when it gets the chow diet, and $\varepsilon_i$ explains the differences between mice of the same population. 
+with <i>&beta;<sub>0</sub></i> the chow diet average weight, <i>&beta;<sub>1</sub></i> the difference between averages, <i>x<sub>i</sub> = 1</i> when mouse <i>i</i> gets the high fat (hf) diet, <i>x<sub>i</sub> = 0</i> when it gets the chow diet, and <i>&epsilon;<sub>i</sub></i> explains the differences between mice of the same population. 
  
-
 #### Linear models in general
 
 We have seen three very different examples in which linear models can be used. A general model that encompasses all of the above examples is the following:
 
-$$ Y_i = \beta_0 + \beta_1 x_{i,1} + \beta_2 x_{i,2} + \dots +  \beta_2 x_{i,p} + \varepsilon_i, i=1,\dots,n $$
+![](../fig/02-Ysubi-equals-betazero-plus-betaonexsubione.png)
 
- 
-$$ Y_i = \beta_0 + \sum_{j=1}^p \beta_j x_{i,j} + \varepsilon_i, i=1,\dots,n $$
+![](../fig/02-Ysubi-equals-betazero-plus-sigma.png)
 
-Note that we have a general number of predictors $p$. Matrix algebra provides a compact language and mathematical framework to compute and make derivations with any linear model that fits into the above framework.
+
+Note that we have a general number of predictors <i>p</i>. Matrix algebra provides a compact language and mathematical framework to compute and make derivations with any linear model that fits into the above framework.
 
 <a name="estimates"></a>
 
 #### Estimating parameters
 
-For the models above to be useful we have to estimate the unknown $\beta$ s. In the first example, we want to describe a physical process for which we can't have unknown parameters. In the second example, we better understand inheritance by estimating how much, on average, the father's height affects the son's height. In the final example, we want to determine if there is in fact a difference: if $\beta_1 \neq 0$. 
+For the models above to be useful we have to estimate the unknown <i>&beta;</i> s. In the first example, we want to describe a physical process for which we can't have unknown parameters. In the second example, we better understand inheritance by estimating how much, on average, the father's height affects the son's height. In the final example, we want to determine if there is in fact a difference: if <i>&beta;<sub>1</sub></i>&ne;0</i>. 
 
 The standard approach in science is to find the values that minimize the distance of the fitted model to the data. The following is called the least squares (LS) equation and we will see it often in this chapter:
 
-$$ \sum_{i=1}^n \left\{  Y_i - \left(\beta_0 + \sum_{j=1}^p \beta_j x_{i,j}\right)\right\}^2 $$
+![](../fig/02-sigma-one-to-n-brace.png)
 
-Once we find the minimum, we will call the values the least squares estimates (LSE) and denote them with $\hat{\beta}$. The quantity obtained when evaluating the least squares equation at the estimates is called the residual sum of squares (RSS). Since all these quantities depend on $Y$, *they are random variables*. The $\hat{\beta}$ s are random variables and we will eventually perform inference on them.
+Once we find the minimum, we will call the values the least squares estimates (LSE) and denote them with ![](../fig/05-beta-hat.png). The quantity obtained when evaluating the least squares equation at the estimates is called the residual sum of squares (RSS). Since all these quantities depend on <i>&Upsilon;</i>, *they are random variables*. The ![](../fig/05-beta-hat.png) s are random variables and we will eventually perform inference on them.
 
 #### Falling object example revisited
 Thanks to my high school physics teacher, I know that the equation for the trajectory of a falling object is: 
+<i>d = <i>h<sub>0</sub> + <i>v<sub>0</sub> t - 0.5 x 9.8 t &sup2;</i>
 
-$$d = h_0 + v_0 t -  0.5 \times 9.8 t^2$$
-
-with $h_0$ and $v_0$ the starting height and velocity respectively. The data we simulated above followed this equation and added measurement error to simulate `n` observations for dropping the ball $(v_0=0)$ from the tower of Pisa $(h_0=56.67)$. This is why we used this code to simulate data:
+with <i>h<sub>0</sub></i> and <i>v<sub>0</sub></i> the starting height and velocity respectively. The data we simulated above followed this equation and added measurement error to simulate `n` observations for dropping the ball <i>v<sub>0</sub> = 0</i> from the tower of Pisa <i>h<sub>0</sub> = 56.67</i>. This is why we used this code to simulate data:
 
 ```{r simulate_drop_data}
 g <- 9.8 ##meters per second
