--- a/_episodes_rmd/03-matrix-notation.Rmd
+++ b/_episodes_rmd/03-matrix-notation.Rmd
@@ -41,6 +41,10 @@ The main point of this entire exercise is to show how we can write the models ab
 
 Linear algebra was created by mathematicians to solve systems of linear equations such as this:
 
+![](../fig/03-system-linear-equations.png)
+
+
+
 $$
 \begin{align*}
 a + b + c &= 6\\
@@ -50,6 +54,9 @@ a + b + c &= 6\\
 $$
 
 It provides very useful machinery to solve these problems generally. We will learn how we can write and solve this system using matrix algebra notation:
+
+![](../fig/03-matrix-alg-notation.png)
+
 
 $$ 
 \,
@@ -90,7 +97,7 @@ This section explains the notation used above. It turns out that we can borrow t
 
 ## Vectors, Matrices, and Scalars
 
-In the falling object, father-son heights, and mouse weight examples, the random variables associated with the data were represented by $Y_1,\dots,Y_n$. We can think of this as a vector. In fact, in R we are already doing this:
+In the falling object, father-son heights, and mouse weight examples, the random variables associated with the data were represented by <i>&Upsilon;<sub>i</sub>, ...,<i>&Upsilon;<sub>n</sub></i>. We can think of this as a vector. In fact, in R we are already doing this:
 
 ```{r,message=FALSE}
 data(father.son,package="UsingR")
@@ -99,37 +106,22 @@ head(y)
 ```
 In math we can also use just one symbol. We usually use bold to distinguish it from the individual entries:
 
-$$ \mathbf{Y} = \begin{pmatrix}
-Y_1\\\
-Y_2\\\
-\vdots\\\
-Y_N
-\end{pmatrix}
-$$
+![](../fig/03-boldy-matrix-not.png)
 
-
-For reasons that will soon become clear, default representation of data vectors have dimension $N\times 1$ as opposed to $1 \times N$ .
+For reasons that will soon become clear, default representation of data vectors have dimension <i>N x 1</i> as opposed to <i>1 x N</i>.
 
 Here we don't always use bold because normally one can tell what is a matrix from the context.
 
 Similarly, we can use math notation to represent the covariates or predictors. In a case with two predictors we can represent them like this:
 
-$$ 
-\mathbf{X}_1 = \begin{pmatrix}
-x_{1,1}\\
-\vdots\\
-x_{N,1}
-\end{pmatrix} \mbox{ and }
-\mathbf{X}_2 = \begin{pmatrix}
-x_{1,2}\\
-\vdots\\
-x_{N,2}
-\end{pmatrix}
-$$
+![](../fig/03-two-bold-X-predictors.png)
 
-Note that for the falling object example $x_{1,1}= t_i$ and $x_{i,1}=t_i^2$ with $t_i$ the time of the i-th observation. Also, keep in mind that vectors can be thought of as $N\times 1$ matrices.
+Note that for the falling object example <i>x<sub>1,1</sub> = t<sub>i</sub></i> and <i>x<sub>i,1</sub> = t<sub>i</sub>i &sup2;</i> with <i>t<sub>i</sub></i> the time of the <i>i</i>-th observation. Also, keep in mind that vectors can be thought of as <i>N x 1</i> matrices.
 
 For reasons that will soon become apparent, it is convenient to represent these in matrices:
+
+![](../fig/03-N-times-2-matrix-of-Xes.png)
+
 
 $$ 
 \mathbf{X} = [ \mathbf{X}_1 \mathbf{X}_2 ] = \begin{pmatrix}
@@ -139,7 +131,7 @@ x_{N,1}&x_{N,2}
 \end{pmatrix}
 $$
 
-This matrix has dimension $N \times 2$. We can create this matrix in R this way:
+This matrix has dimension <i>N x 2</i>. We can create this matrix in R this way:
 
 ```{r}
 n <- 25
@@ -149,7 +141,10 @@ head(X)
 dim(X)
 ```
 
-We can also use this notation to denote an arbitrary number of covariates with the following $N\times p$ matrix:
+We can also use this notation to denote an arbitrary number of covariates with the following <i>N x p</i> matrix:
+
+![](../fig/03-N-times-p-matrix-of-Xes.png)
+
 
 $$
 \mathbf{X} = \begin{pmatrix}
