--- a/_episodes_rmd/02-intro-using-regression.Rmd
+++ b/_episodes_rmd/02-intro-using-regression.Rmd
@@ -134,6 +134,8 @@ The standard approach in science is to find the values that minimize the distanc
 Once we find the minimum, we will call the values the least squares estimates (LSE) and denote them with ![](../fig/05-beta-hat.png)
 The quantity obtained when evaluating the least squares equation at the estimates is called the residual sum of squares (RSS). Since all these quantities depend on <i>&Upsilon;</i>, *they are random variables*. The ![](../fig/05-beta-hat.png)s are random variables and we will eventually perform inference on them.
 
+&betacirc;
+
 #### Falling object example revisited
 Thanks to my high school physics teacher, I know that the equation for the trajectory of a falling object is: 
 <i>d = <i>h<sub>0</sub> + <i>v<sub>0</sub> t - 0.5 x 9.8t&sup2;</i>
