--- a/_episodes_rmd/04-matrix-operations.Rmd
+++ b/_episodes_rmd/04-matrix-operations.Rmd
@@ -1,25 +1,25 @@
 ---
 title: "Matrix Operations"
+keypoints:
+- '.'
+- '.'
+- '.'
+- '.'
+objectives:
+- ''
+- ''
+- ''
+- ''
+- ''
+- ''
+- ''
+questions:
+- What are matrix operations?
+- '?'
+- '?'
+source: Rmd
 teaching: 0
 exercises: 0
-questions:
-- "?"
-- "?"
-- "?"
-objectives:
-- ""
-- ""
-- ""
-- ""
-- ""
-- ""
-- ""
-keypoints:
-- "."
-- "."
-- "."
-- "."
-source: Rmd
 ---
 
 ```{r, include=FALSE}
