--- a/_episodes_rmd/02-intro-using-regression.Rmd
+++ b/_episodes_rmd/02-intro-using-regression.Rmd
@@ -3,7 +3,7 @@ title: "Introduction to Linear Models"
 teaching: 0
 exercises: 0
 questions:
-- "?"
+- "what is a linear model?"
 - "?"
 - "?"
 objectives:
