remove data download from episode and place in setup

--- a/_episodes_rmd/02-inference.Rmd
+++ b/_episodes_rmd/02-inference.Rmd
@@ -75,7 +75,7 @@ and obtained this data (`head` just shows us the first 6 rows):
 
 If you already downloaded the `femaleMiceWeights` file into your working directory, you can read it into R with just one line:
 
-```{r echo=FALSE, results="hide"}
+```{r load_Fweights, results="hide"}
 library(downloader) ##use install.packages to install
 dir <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/"
 filename <- "femaleMiceWeights.csv"
@@ -118,7 +118,7 @@ If we repeat the experiment, we obtain 24 new mice from The Jackson Laboratory a
 
 Let's explore random variables further. Imagine that we actually have the weight of all control female mice and can upload them to R. In Statistics, we refer to this as *the population*. These are all the control mice available from which we sampled 24. Note that in practice we do not have access to the population. We have a special dataset that we are using here to illustrate concepts. 
 
-```{r, echo=FALSE}
+```{r load_Fcontrols}
 library(downloader)
 dir <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/"
 filename <- "femaleControlsPopulation.csv"
