--- a/_episodes_rmd/02-inference.Rmd
+++ b/_episodes_rmd/02-inference.Rmd
@@ -74,7 +74,7 @@ fat (hf) diet. After several weeks, the scientists weighed each mouse
 and obtained this data (`head` just shows us the first 6 rows):
 
 ```{r load_weight_data}
-dat <- read_csv("data/femaleMiceWeights.csv")
+dat <- read_csv("../data/femaleMiceWeights.csv")
 head(dat) 
 ``` 
 
@@ -106,7 +106,7 @@ Let's explore random variables further. Imagine that we actually have the weight
 Now let's sample 12 mice three times and see how the average changes.
 
 ```{r control_population}
-population < read_csv(file = "data/femaleControlsPopulation.csv")
+population < read_csv(file = "../data/femaleControlsPopulation.csv")
 population <- unlist(population) # turn into numeric
 
 control <- sample(population,12)
@@ -183,39 +183,39 @@ We have explained what we mean by *null* in the context of null hypothesis, but 
 The simplest way to think of a *distribution* is as a compact description of many numbers. For example, suppose you have measured the heights of all men in a population. Imagine you need to describe these numbers to someone that has no idea what these heights are, such as an alien that has never visited Earth. Suppose all these heights are contained in the following dataset:
 
 ```{r definingHeights, message=FALSE}
-data(father.son,package="UsingR")
+data(father.son, package="UsingR")
 x <- father.son$fheight
 ```
 
 One approach to summarizing these numbers is to simply list them all out for the alien to see. Here are 10 randomly selected heights of 1,078:
 
-```{r}
-round(sample(x,10),1)
+```{r random_samples}
+round(sample(x, 10), 1)
 ```
 
 #### Cumulative Distribution Function
 
 Scanning through these numbers, we start to get a rough idea of what the entire list looks like, but it is certainly inefficient. We can quickly improve on this approach by defining and visualizing a _distribution_. To define a distribution we compute, for all possible values of $a$, the proportion of numbers in our list that are below $a$. We use the following notation:
 
-$$ F(a) \equiv \mbox{Pr}(x \leq a) $$
+
+![](../fig/02-cum-dist-function.png)
 
 This is called the cumulative distribution function (CDF). When the CDF is derived from data, as opposed to theoretically, we also call it the empirical CDF (ECDF). The ECDF for the height data looks like this:
 
-```{r ecdf,fig.cap="Empirical cummulative distribution function for height.", echo=FALSE}
+```{r ecdf, fig.cap="Empirical cumulative distribution function for height.", echo=FALSE}
 smallest <- floor( min(x) )
 largest <- ceiling( max(x) )
-values <- seq(smallest, largest,len=300)
+values <- seq(smallest, largest, len=300)
 heightecdf <- ecdf(x)
 plot(values, heightecdf(values), type="l",
-     xlab="a (Height in inches)",ylab="Pr(x <= a)")
+     xlab="a (Height in inches)", ylab="Pr(x <= a)")
 ```
 
 #### Histograms
 
-Although the empirical CDF concept is widely discussed in statistics textbooks, the plot is actually not very popular in practice. The reason is that histograms give us the same information and are easier to interpret. Histograms show us the
-proportion of values in intervals: 
+Although the empirical CDF concept is widely discussed in statistics textbooks, the plot is actually not very popular in practice. The reason is that histograms give us the same information and are easier to interpret. Histograms show us the proportion of values in intervals: 
 
-$$ \mbox{Pr}(a \leq x \leq b) = F(b) - F(a) $$
+![](../fig/02-proba-lessthan-b.png)
 
 Plotting these heights as bars is what we call a _histogram_. It is a
 more useful plot because we are usually more interested in intervals,
@@ -223,13 +223,8 @@ such and such percent are between 70 inches and 71 inches, etc.,
 rather than the percent less than a particular height. Here is a histogram 
 of heights: 
 
-```{r hist, eval=FALSE}
-hist(x)
-```
-
-We can add better labels in the following way:
 ```{r histogram, fig.cap="Histogram for heights."}
-hist(x,xlab="Height (in inches)",main="Adult men heights")
+hist(x, xlab="Height (in inches)", main="Adult men heights")
 ```
 
 Showing this plot to the alien is much more informative than showing numbers. With this simple plot, we can approximate the number of individuals in any given interval. For example, there are about 70 individuals over six feet (72 inches) tall. 
@@ -239,11 +234,10 @@ Showing this plot to the alien is much more informative than showing numbers. Wi
 
 Summarizing lists of numbers is one powerful use of distribution. An
 even more important use is describing the possible outcomes of a
-random variable. Unlike a fixed list of numbers, we don't actually observe all possible outcomes of random variables, so instead of describing proportions, we describe
-probabilities. For instance, if we pick a random height from our list,
+random variable. Unlike a fixed list of numbers, we don't actually observe all possible outcomes of random variables, so instead of describing proportions, we describe probabilities. For instance, if we pick a random height from our list,
 then the probability of it falling between $a$ and $b$ is denoted with: 
 
-$$ \mbox{Pr}(a \leq X \leq b) = F(b) - F(a) $$
+![](..fig/02-proba-lt-random.png)
 
 Note that the $X$ is now capitalized to distinguish it as a random
 variable and that the equation above defines the probability
@@ -261,7 +255,7 @@ The observed values will amount to a histogram. From a histogram of the
 `null` vector we calculated earlier, we can see that values as large
 as `obsdiff` are relatively rare: 
 
-```{r null_and_obs,fig.cap="Null distribution with observed difference marked with vertical red line."}
+```{r null_and_obs, fig.cap="Null distribution with observed difference marked with vertical red line."}
 hist(null, freq=TRUE)
 abline(v=obsdiff, col="red", lwd=2)
 ```
@@ -274,9 +268,7 @@ An important point to keep in mind here is that while we defined $\mbox{Pr}(a)$ 
 
 The probability distribution we see above approximates one that is very common in nature: the bell curve, also known as the normal distribution or Gaussian distribution. When the histogram of a list of numbers approximates the normal distribution, we can use a convenient mathematical formula to approximate the proportion of values or outcomes in any given interval:
 
-$$
-\mbox{Pr}(a < x < b) = \int_a^b \frac{1}{\sqrt{2\pi\sigma^2}} \exp{\left( \frac{-(x-\mu)^2}{2 \sigma^2} \right)} \, dx
-$$
+![](../fig/02-normal-dist-hist.png)
 
 While the formula may look intimidating, don't worry, you will never
 actually have to type it out, as it is stored in a more convenient
@@ -292,8 +284,8 @@ compute the proportion of values below a value `x` with
 `pnorm(x,mu,sigma)` without knowing all the values. The normal
 approximation works very well here: 
 
-```{r}
-1 - pnorm(obsdiff,mean(null),sd(null)) 
+```{r proportion}
+1 - pnorm(obsdiff, mean(null), sd(null)) 
 ```
 
 Later, we will learn that there is a mathematical explanation for this. A very useful characteristic of this approximation is that one only needs to know $\mu$ and $\sigma$ to describe the entire distribution. From this, we can compute the proportion of values in any interval. 
@@ -316,13 +308,13 @@ sections.
 Before we continue, we briefly explain the following important line of
 code:
 
-```{r}
+```{r explain_setseed}
 set.seed(1) 
 ```
 
 Throughout this book, we use random number generators. This implies that many of the results presented can actually change by chance, including the correct answer to problems. One way to ensure that results do not change is by setting R's random number generation seed. For more on the topic please read the help file:
 
-```{r,eval=FALSE}
+```{r, eval=FALSE}
 ?set.seed
 ```
 
@@ -333,7 +325,7 @@ The question we are asking is can be expressed as:
 
 Is
 
-$$\mu_Y - \mu_X = 0?$$
+![](../fig/02-muy-mux-eq-zero.png)
 
 [example of normal curves]("https://www.varsitytutors.com/assets/vt-hotmath-legacy/hotmath_help/topics/normal-distribution-of-data/normal-distribution-1.gif")
 
@@ -343,32 +335,25 @@ In reality we use sample estimates of population parameters. The true population
 
 Now that we have introduced the idea of a random variable, a null distribution, and a p-value, we are ready to describe the mathematical theory that permits us to compute p-values in practice. We will also learn about confidence intervals and power calculations.
 
-```{r echo=FALSE}
-library(downloader)
-dir <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/"
-filename <- "mice_pheno.csv"
-url <- paste0(dir, filename)
-if (!file.exists(filename)) download(url,destfile=filename)
-```
-
 ```{r}
-dat <- read.csv("mice_pheno.csv")
+pheno <- read_csv(file = "../data/mice_pheno.csv")
 ```
 
 We can then access the population values and determine, for example, how many we have. Here we compute the size of the control population:
 
-```{r,message=FALSE}
-library(dplyr)
-controlPopulation <- filter(dat,Sex == "F" & Diet == "chow") %>% 
-  select(Bodyweight) %>% unlist
+```{r load_pheno, message=FALSE}
+controlPopulation <- filter(pheno, Sex == "F" & Diet == "chow") %>%
+  select(Bodyweight) %>%
+  unlist
 length(controlPopulation)
 ```
 
 We usually denote these values as $x_1,\dots,x_m$. In this case, $m$ is the number computed above. We can do the same for the high fat diet population:
 
 ```{r}
-hfPopulation <- filter(dat,Sex == "F" & Diet == "hf") %>%  
-  select(Bodyweight) %>% unlist
+hfPopulation <- filter(pheno, Sex == "F" & Diet == "hf") %>%  
+  select(Bodyweight) %>%
+  unlist
 length(hfPopulation)
 ```
 
@@ -378,9 +363,10 @@ We can then define summaries of interest for these populations, such as the mean
 
 The mean:
 
-$$\mu_X = \frac{1}{m}\sum_{i=1}^m x_i \mbox{ and } \mu_Y = \frac{1}{n} \sum_{i=1}^n y_i$$
+![](../fig/02-mux-and-muy.png)
 
-```{r}
+
+```{r mu_control_vs_hf}
 # X is the control population
 sum(controlPopulation$weight) # sum of the xsubi's
 length(controlPopulation$weight) # this equals m
@@ -391,12 +377,12 @@ sum(controlPopulation$weight)/length(controlPopulation$weight) # this equals mu 
 sum(hfPopulation$weight) # sum of the ysubi's
 sum(hfPopulation$weight)/length(hfPopulation$weight) # this equals mu sub y
 ```
+
 The variance:
 
-$$\sigma_X^2 = \frac{1}{m}\sum_{i=1}^m (x_i-\mu_X)^2 \mbox{ and } \sigma_Y^2 = \frac{1}{n} \sum_{i=1}^n (y_i-\mu_Y)^2$$
+![](../fig/02-var-x-and-y.png)
 
 with the standard deviation being the square root of the variance. We refer to such quantities that can be obtained from the population as _population parameters_. The question we started out asking can now be written mathematically: is $\mu_Y - \mu_X = 0$ ? 
-
 Although in our illustration we have all the values and can check if this is true, in practice we do not. For example, in practice it would be prohibitively expensive to buy all the mice in a population. Here we learn how taking a _sample_ permits us to answer our questions. This is the essence of statistical inference.
 
 #### Sample estimates
@@ -411,21 +397,17 @@ The CLT is one of the most frequently used mathematical results in science. It t
 
 This implies that if we take many samples of size $N$, then the quantity: 
 
-$$
-\frac{\bar{Y} - \mu}{\sigma_Y/\sqrt{N}}
-$$
+![](../fig/02-random-sample.png)
 
 is approximated with a normal distribution centered at 0 and with standard deviation 1.
 
 We are interested in the difference between two sample averages. Again, applying certain mathematical principles, it can be implied that the below ratio:  
 
-$$
-\frac{\bar{Y}-\bar{X}}{\sqrt{\frac{\sigma_X^2}{M} + \frac{\sigma_Y^2}{N}}}
-$$
+![](../fig/02-diff-sample-avgs.png)
 
 is approximated by a normal distribution centered at 0 and standard deviation 1. Calculating p-values for the standard normal distribution is simple because we know the proportion of the distribution under any value. For example, only 5% of the values in the standard normal distribution are larger than 2 (in absolute value):
 
-```{r}
+```{r calc_pvalue}
 pnorm(-2) + (1 - pnorm(2))
 ```
 
@@ -433,21 +415,17 @@ We don't need to buy more mice, 12 and 12 suffice.
 
 However, we can't claim victory just yet because we don't know the population standard deviations: $\sigma_X$ and $\sigma_Y$. These are unknown population parameters, but we can get around this by using the sample standard deviations, call them $s_X$ and $s_Y$. These are defined as: 
 
-$$ s_X^2 = \frac{1}{M-1} \sum_{i=1}^M (X_i - \bar{X})^2  \mbox{ and }  s_Y^2 = \frac{1}{N-1} \sum_{i=1}^N (Y_i - \bar{Y})^2 $$
+![](../fig/02-sample-stddev.png)
 
 Note that we are dividing by $M-1$ and $N-1$, instead of by $M$ and $N$. There is a theoretical reason for doing this which we do not explain here.
 
 So we can redefine our ratio as
 
-$$
-\sqrt{N} \frac{\bar{Y}-\bar{X}}{\sqrt{s_X^2 +s_Y^2}}
-$$
+![](../fig/02-sqrtN.png)
 
 if $M=N$ or in general,
 
-$$
-\frac{\bar{Y}-\bar{X}}{\sqrt{\frac{s_X^2}{M} + \frac{s_Y^2}{N}}}
-$$
+![](../fig/02-ybar-xbar.png)
 
 The CLT tells us that when $M$ and $N$ are large, this random variable is normally distributed with mean 0 and SD 1. Thus we can compute p-values using the function `pnorm`.
 
@@ -455,9 +433,7 @@ The CLT tells us that when $M$ and $N$ are large, this random variable is normal
 
 The CLT relies on large samples, what we refer to as _asymptotic results_. When the CLT does not apply, there is another option that does not rely on asymptotic results. When the original population from which a random variable, say $Y$, is sampled is normally distributed with mean 0, then we can calculate the distribution of: 
 
-$$
-\sqrt{N} \frac{\bar{Y}}{s_Y}
-$$
+![](../fig/02-tdist.gif)
 
 This is the ratio of two random variables so it is not
 necessarily normal. The fact that the denominator can be small by
@@ -478,15 +454,15 @@ We will now demonstrate how to obtain a p-value in practice. We begin by loading
 
 #### Read in and prepare data
 
-We start by reading in the data. A first important step is to identify
-which rows are associated with treatment and control, and to compute
-the difference in mean. 
+We start by reading in the data. A first important step is to identify which rows are associated with treatment and control, and to compute the difference in mean. 
 
-```{r,message=FALSE}
-library(dplyr)
-dat <- read.csv("femaleMiceWeights.csv") #previously downloaded
-control <- filter(dat,Diet=="chow") %>% select(Bodyweight) %>% unlist
-treatment <- filter(dat,Diet=="hf") %>% select(Bodyweight) %>% unlist
+```{r chow_hf, message=FALSE}
+control <- filter(dat, Diet=="chow") %>%
+  select(Bodyweight) %>%
+  unlist
+treatment <- filter(dat, Diet=="hf") %>%
+  select(Bodyweight) %>%
+  unlist
 diff <- mean(treatment) - mean(control)
 print(diff)
 ```
@@ -495,7 +471,7 @@ We are asked to report a p-value. What do we do? We learned that
 `diff`, referred to as the _observed effect size_, is a random
 variable. We also learned that under the null hypothesis, the mean of the distribution of `diff` is 0. What about the standard error? We also learned that the standard error of this random variable is the population standard deviation divided by the square root of the sample size:
 
-$$ SE(\bar{X}) = \sigma / \sqrt{N}$$
+![](../fig/02-stderr.png)
 
 We use the sample standard deviation as an estimate of the population
 standard deviation. In R, we simply use the `sd` function and the SE is:
@@ -506,15 +482,14 @@ sd(control)/sqrt(length(control))
 
 This is the SE of the sample average, but we actually want the SE of `diff`. We saw how statistical theory tells us that the variance of the difference of two random variables is the sum of its variances, so we compute the variance and take the square root:
 
-```{r}
+```{r stderr}
 se <- sqrt( 
   var(treatment)/length(treatment) + 
   var(control)/length(control) 
   )
 ```
 
-Statistical theory tells us that if we divide a random variable by its
-SE, we get a new random variable with an SE of 1.
+Statistical theory tells us that if we divide a random variable by its SE, we get a new random variable with an SE of 1.
 
 ```{r}
 tstat <- diff/se 
@@ -534,7 +509,7 @@ probability of seeing something as extreme as `diff`: either smaller
 (more negative) than `-abs(diff)` or larger than `abs(diff)`. We call
 these two regions "tails" and calculate their size:
 
-```{r}
+```{r tails}
 righttail <- 1 - pnorm(abs(tstat)) 
 lefttail <- pnorm(-abs(tstat))
 pval <- lefttail + righttail
@@ -575,13 +550,13 @@ normal. The t-distribution has a location parameter like the normal
 and another parameter called *degrees of freedom*. R has a nice
 function that actually computes everything for us. 
 
-```{r}
+```{r t_test}
 t.test(treatment, control)
 ```
 
 To see just the p-value, we can use the `$` extractor:
 
-```{r}
+```{r ttest_result}
 result <- t.test(treatment,control)
 result$p.value
 ```
@@ -607,20 +582,12 @@ to incorrectly accept the null hypothesis (false negative).
 Now that we have gone over the concepts, we can show the relatively
 simple code that one would use to actually compute a t-test: 
 
-
-```{r,message=FALSE,echo=FALSE}
-library(downloader)
-url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv"
-filename <- "mice_pheno.csv"
-if(!file.exists(filename)) download(url,destfile=filename)
-```
-
-```{r,message=FALSE}
-library(dplyr)
-dat <- read.csv("mice_pheno.csv")
-control <- filter(dat,Diet=="chow") %>% select(Bodyweight) 
-treatment <- filter(dat,Diet=="hf") %>% select(Bodyweight) 
-t.test(treatment,control)
+```{r ttest_pheno, message=FALSE}
+control <- filter(pheno, Diet=="chow") %>%
+  select(Bodyweight) 
+treatment <- filter(pheno, Diet=="hf") %>%
+  select(Bodyweight) 
+t.test(treatment, control)
 ```
 
 The arguments to `t.test` can be of type *data.frame* and thus we do not need to unlist them into numeric objects.
@@ -657,30 +624,22 @@ Then we will return to the group difference after we've learned how to build
 confidence intervals in the simple case.
 We start by reading in the data and selecting the appropriate rows:
 
-```{r,echo=FALSE}
-library(downloader)
-url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv"
-filename <- "mice_pheno.csv"
-if (!file.exists(filename)) download(url,destfile=filename)
-```
-
-```{r}
-dat <- read.csv("mice_pheno.csv")
-chowPopulation <- dat[dat$Sex=="F" & dat$Diet=="chow",3]
+```{r chowPop}
+chowPopulation <- pheno[pheno$Sex=="F" & pheno$Diet=="chow", 3]
 ```
 
 The population average $\mu_X$ is our parameter of interest here:
 
-```{r}
+```{r muChow}
 mu_chow <- mean(chowPopulation)
 print(mu_chow)
 ```
 
 We are interested in estimating this parameter. In practice, we do not get to see the entire population so, as we did for p-values, we demonstrate how we can use samples to do this. Let's start with a sample of size 30:
 
-```{r}
+```{r sampleChow}
 N <- 30
-chow <- sample(chowPopulation,N)
+chow <- sample(chowPopulation, N)
 print(mean(chow))
 ```
 
@@ -706,13 +665,11 @@ To construct it, we note that the CLT tells us that
 $\sqrt{N} (\bar{X}-\mu_X) / s_X$ follows a normal distribution with mean 0 and
 SD 1. This implies that the probability of this event:
 
-$$
--2 \leq \sqrt{N} (\bar{X}-\mu_X)/s_X \leq 2
-$$  
+![](../fig/02-confint.png)
 
 which written in R code is:
 
-```{r}
+```{r conf_int}
 pnorm(2) - pnorm(-2)
 ```
 
@@ -720,10 +677,8 @@ pnorm(2) - pnorm(-2)
 2). Now do some basic algebra to clear out everything and leave
 $\mu_X$ alone in the middle and you get that the following event: 
 
-$$
-\bar{X}-2 s_X/\sqrt{N} \leq \mu_X \leq \bar{X}+2s_X/\sqrt{N}
-$$  
-
+![](../fig/02-event-confint.png)
+ 
 has a probability of 95%. 
 
 Be aware that it is the edges of the interval 
@@ -737,8 +692,8 @@ fixed population mean $\mu_X$.
 Let's demonstrate this logic through simulation. We can construct this
 interval with R relatively easily: 
 
-```{r}
-Q <- qnorm(1- 0.05/2)
+```{r const_conf_int}
+Q <- qnorm(1 - 0.05/2)
 interval <- c(mean(chow)-Q*se, mean(chow)+Q*se )
 interval
 interval[1] < mu_chow & interval[2] > mu_chow
@@ -857,15 +812,7 @@ In summary, if a 95% or 99% confidence interval does not include
 
 Note that the confidence interval for the difference $d$ is provided by the `t.test` function:
 
-```{r,echo=FALSE}
-library(downloader)
-url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/femaleMiceWeights.csv"
-filename <- "femaleMiceWeights.csv"
-if (!file.exists(filename)) download(url,destfile=filename)
-```
-
-```{r,echo=FALSE}
-dat <- read.csv("femaleMiceWeights.csv")
+```{r control_v_treatment,echo=FALSE}
 controlIndex <- which(dat$Diet=="chow")
 treatmentIndex <- which(dat$Diet=="hf")
 control <- dat[controlIndex,2]
