--- a/_episodes_rmd/02-inference.Rmd
+++ b/_episodes_rmd/02-inference.Rmd
@@ -85,8 +85,12 @@ the hf diet. Just from looking at the data, we see there is
 averages. So let's look at the average of each group: 
 
 ```{r control_treatment, message=FALSE}
-control <- filter(dat, Diet=="chow") %>% select(Bodyweight)
-treatment <- filter(dat, Diet=="hf") %>% select(Bodyweight)
+control <- filter(dat, Diet=="chow") %>%
+  select(Bodyweight) %>% 
+  unlist
+treatment <- filter(dat, Diet=="hf") %>%
+  select(Bodyweight) %>% 
+  unlist
 print( mean(treatment) )
 print( mean(control) )
 obsdiff <- mean(treatment) - mean(control)
@@ -109,13 +113,13 @@ Now let's sample 12 mice three times and see how the average changes.
 population <- read_csv(file = "../data/femaleControlsPopulation.csv")
 
 control <- sample(population$Bodyweight, 12)
-mean(control$Bodyweight)
+mean(control)
 
 control <- sample(population$Bodyweight, 12)
-mean(control$Bodyweight)
+mean(control)
 
 control <- sample(population$Bodyweight, 12)
-mean(control$Bodyweight)
+mean(control)
 ```
 
 Note how the average varies. We can continue to do this repeatedly and start learning something about the distribution of this random variable.
@@ -342,7 +346,7 @@ We can then access the population values and determine, for example, how many we
 
 ```{r load_pheno, message=FALSE}
 controlPopulation <- filter(pheno, Sex == "F" & Diet == "chow") %>%
-  select(Bodyweight)
+  select(Bodyweight) 
 length(controlPopulation)
 ```
 
