--- a/_episodes_rmd/02-inference.Rmd
+++ b/_episodes_rmd/02-inference.Rmd
@@ -628,7 +628,10 @@ confidence intervals in the simple case.
 We start by reading in the data and selecting the appropriate rows:
 
 ```{r chowPop}
-chowPopulation <- pheno[pheno$Sex=="F" & pheno$Diet=="chow", 3]
+chowPopulation <- pheno %>% 
+  filter(Sex=="F" & Diet=="chow") %>% 
+  select(Bodyweight) %>% 
+  unlist
 ```
 
 The population average $\mu_X$ is our parameter of interest here:
